deploy/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dragon-production
  labels:
    env: production
    managed-by: gitops
